Linked CSS to HTML

--- a/photo.html
+++ b/photo.html
@@ -19,9 +19,9 @@
     <title>Photo</title>
   </head>
   <body>
-    <a href="/index.html"> Home</a>
-    <a href="/photo.html"> Photo</a>
-    <a href="/contact.html"> Contact</a>
+    <a href="index.html"> Home</a>
+    <a href="photo.html"> Photo</a>
+    <a href="contact.html"> Contact</a>
     <br />
     <img src="crossiant.jpg" alt="Pic of crossiant" class="crossiant" />
   </body>
