--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,12 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles.css" />
     <title>Contact</title>
   </head>
   <body>
-    <a href="/index.html"> Home</a>
-    <a href="/photo.html"> Photo</a>
-    <a href="/contact.html"> Contact</a>
+    <a href="index.html"> Home</a>
+    <a href="photo.html"> Photo</a>
+    <a href="contact.html"> Contact</a>
   </body>
 </html>
