--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles.css" />
     <title>HOME</title>
   </head>
   <body>
     <h1>Crossiants</h1>
     <br />
 
-    <a href="/index.html"> Home</a>
-    <a href="/photo.html"> Photo</a>
-    <a href="/contact.html"> Contact</a>
+    <a href="index.html"> Home</a>
+    <a href="photo.html"> Photo</a>
+    <a href="contact.html"> Contact</a>
   </body>
 </html>
