Replaced the image

--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,10 @@
     <a href="index.html"> Home</a>
     <a href="photo.html"> Photo</a>
     <a href="contact.html"> Contact</a>
+
+    <h3>
+      Click on the link below to contact us
+      <a href="https://www.shecodes.io/" target="_blank">LINK</a>
+    </h3>
   </body>
 </html>
