--- a/photo.html
+++ b/photo.html
@@ -23,6 +23,7 @@
     <a href="photo.html"> Photo</a>
     <a href="contact.html"> Contact</a>
     <br />
-    <img src="crossiant.jpg" alt="Pic of crossiant" class="crossiant" />
+    <h2>This is a picture of a crossiant</h2>
+    <img src="crossianto.jpg" alt="Pic of crossiant" class="crossiant" />
   </body>
 </html>
