--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
     <a href="index.html"> Home</a>
     <a href="photo.html"> Photo</a>
     <a href="contact.html"> Contact</a>
+
+    <h3>
+      The croissant bakery, notably the La Croissanterie chain, was a French
+      response to American-style fast food, and as of 2008, 30% to 40% of the
+      croissants sold in French bakeries and patisseries were baked from frozen
+      dough.
+    </h3>
   </body>
 </html>
