Added designer's name

--- a/contact.html
+++ b/contact.html
@@ -26,5 +26,7 @@
       Click on the link below to contact us
       <a href="https://www.shecodes.io/" target="_blank">LINK</a>
     </h3>
+    <br />
+    <p>Website coding & design done by Sush Budhayee</p>
   </body>
 </html>
