--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
       croissants sold in French bakeries and patisseries were baked from frozen
       dough.
     </h3>
+
+    <p>Website coding & design done by Sush Budhayee</p>
   </body>
 </html>
