--- a/photo.html
+++ b/photo.html
@@ -25,5 +25,7 @@
     <br />
     <h2>This is a picture of a crossiant</h2>
     <img src="crossianto.jpg" alt="Pic of crossiant" class="crossiant" />
+    <br />
+    <p>Website coding & design done by Sush Budhayee</p>
   </body>
 </html>
