Updated page titles

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Contact Page- Croissant</title>
+    <title>Contact Page- Croissant.co.za</title>
   </head>
   <body>
     <a href="index.html"> Home</a>
