--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>HOME PAGE - CROISSANT</title>
+    <title>HOME PAGE - Croissant.co.za</title>
   </head>
   <body>
     <h1>Crossiants</h1>
