--- a/photo.html
+++ b/photo.html
@@ -20,7 +20,7 @@
     ></script>
 
     <link rel="stylesheet" href="styles.css" />
-    <title>Photo of Croissant</title>
+    <title>Photo of Croissant.co.za</title>
   </head>
   <body>
     <a href="index.html"> Home</a>
